--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Giang Luong (Thi)
 description: Data Analyst/ Data Scientist | Economic Background | 3+ Years BI Expertise | Power BI, Google Data Studio, Python Modeling.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
