--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Giang Luong (Thi)
 description: Data Analyst/ Data Scientist | Economic Background | 3+ Years BI Expertise | Power BI, Google Data Studio, Python Modeling.
 show_downloads: false
+github.is_project_page: true
 google_analytics:
 theme: jekyll-theme-cayman
